# polyview

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  eslint.config.js  index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml
commands/: polyview.md
skills/polyview/: SKILL.md
src/: App.tsx  index.css  main.tsx  middleware.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  local.rs  main.rs  settings.rs
src/app/: globals.css  layout.tsx
src/app/api/compile-tsx/: route.ts
src/app/api/raw/: route.ts
src/app/browse/[[...slug]]/: page.tsx
src/app/settings/: page.tsx
src/components/: AppHeader.tsx  ConfigError.tsx  ContextMenu.tsx  FileTree.tsx  MenuBridge.tsx  ThemeProvider.tsx  ThemeToggle.tsx  TitleBar.tsx  Viewer.tsx  icons.tsx
src/components/renderers/: CodeRenderer.tsx  HtmlRenderer.tsx  MarkdownRenderer.tsx  Mermaid.tsx  OpenApiRenderer.tsx  TsxRenderer.tsx
src/lib/: cache.ts  config.ts  constants.ts  extensions.ts  format.ts  github.ts  highlight-client.ts  highlight.ts  local-actions.ts  paths.ts  react-runtime.ts  settings-context.tsx  settings.ts  theme.tsx  tsx-compiler.ts  use-color-scheme.ts
src/lib/sources/: github.ts  index.ts  local.ts  types.ts
src/routes/: Browse.tsx  Settings.tsx
